# wireform-

./: .envrc  .gitignore  .hlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MISSING_FEATURES.md  NOTICE  README.md  agents.md  bench-baseline.html  bench-current.csv  bench-reverted.csv  cabal.project  f-string  final.csv  flake.nix  fourmolu.yaml  hs-proto.cabal  message-inventory.json  optimized.csv  optimized2.csv  optimized3.csv  optimized4.csv  wireform-yaml-bench.prof  wireform.cabal
grpc-spec/: grpc-spec.cabal
grpc-spec/proto/Proto/: OrcaLoadReport.hs  Status.hs
wireform-arrow/: README.md  wireform-arrow.cabal
wireform-arrow/scripts/: pyarrow_interop.py
wireform-arrow/src/Arrow/: Column.hs  Derive.hs  File.hs  FlatBufferIPC.hs  IPC.hs  Record.hs  Stream.hs  Types.hs  Write.hs
wireform-arrow/test/: Main.hs
wireform-arrow/test-derive/: Main.hs
wireform-arrow/test-probe/: Probe.hs
wireform-arrow/test/golden/: pa_dict.arrows  pa_int32.arrows  pa_mixed.arrows
wireform-asn1/: README.md  wireform-asn1.cabal
wireform-asn1/bench/: Bench.hs
wireform-asn1/bench-results/summary/: asn1-encode-decode.json
wireform-asn1/src/ASN1/: CodeGen.hs  Decode.hs  Derive.hs  Encode.hs  Parser.hs  QQ.hs  Schema.hs  Value.hs
wireform-asn1/test/: Main.hs
wireform-attoparsec/: wireform-attoparsec.cabal
wireform-avro/: README.md  wireform-avro.cabal
wireform-avro/src/Avro/: Class.hs  CodeGen.hs  Container.hs  Decode.hs  Derive.hs  Encode.hs  Encoding.hs  Fingerprint.hs  IDL.hs  IDLConvert.hs  JSON.hs  Protocol.hs  QQ.hs  Registry.hs  Resolution.hs  Schema.hs  Value.hs  Wire.hs
wireform-avro/test/: Main.hs
wireform-bencode/: README.md  wireform-bencode.cabal
wireform-bencode/bench/: Bench.hs
wireform-bencode/bench-results/summary/: bencode-encode-decode.json
wireform-bencode/src/Bencode/: Class.hs  Decode.hs  Derive.hs  Encode.hs  Encoding.hs  Value.hs
wireform-bencode/test/: Main.hs
wireform-binary/: wireform-binary.cabal
wireform-bond/: README.md  wireform-bond.cabal
wireform-bond/bench/: Bench.hs
wireform-bond/bench-results/summary/: bond-encode-decode.json
wireform-bond/src/Bond/: CodeGen.hs  Decode.hs  Derive.hs  Encode.hs  Parser.hs  QQ.hs  Registry.hs  Schema.hs  Value.hs
wireform-bond/test/: Main.hs
wireform-bson/: LICENSE  README.md  wireform-bson.cabal
wireform-bson/bench/: Bench.hs
wireform-bson/bench-results/summary/: bson-encode-decode.json
wireform-bson/src/BSON/: Class.hs  Decode.hs  Derive.hs  Encode.hs  Encoding.hs  Value.hs
wireform-bson/test/: Main.hs
wireform-capnproto/: README.md  wireform-capnproto.cabal
wireform-capnproto/bench/: Bench.hs
wireform-capnproto/bench-results/summary/: capnproto-encode-decode.json
wireform-capnproto/src/CapnProto/: CodeGen.hs  Decode.hs  Derive.hs  Encode.hs  Parser.hs  QQ.hs  Registry.hs  Schema.hs  Value.hs
wireform-capnproto/test/: Main.hs
wireform-cbor/: README.md  wireform-cbor.cabal
wireform-cbor/bench-results/summary/: cbor-vs-cborg-encode.json
wireform-cbor/src/CBOR/: CDDL.hs  CDDLCodeGen.hs  CDDLSchema.hs  Class.hs  Decode.hs  Derive.hs  Diagnostic.hs  Encode.hs  Encoding.hs  JSON.hs  QQ.hs  Stream.hs  TagRegistry.hs  Value.hs
wireform-cbor/test/: Main.hs
wireform-cel/: README.md  wireform-cel.cabal
wireform-cel/conformance/: Main.hs
wireform-cel/src/: CEL.hs
wireform-cel/src/CEL/: Environment.hs  Error.hs  Eval.hs  Parser.hs  Stdlib.hs  Syntax.hs  TH.hs  Value.hs
wireform-cel/test/: Main.hs
wireform-cereal/: wireform-cereal.cabal
wireform-columnar/: README.md  wireform-columnar.cabal
wireform-columnar-core/: README.md  wireform-columnar-core.cabal
wireform-columnar-core/src/Columnar/: IO.hs  LZ4.hs  (+3 more)
wireform-columnar-core/test/: Main.hs
wireform-columnar/test/: Main.hs
wireform-core/: CHANGELOG.md  LICENSE  README.md  wireform-core.cabal
wireform-core/bench/: Common.hs  FPBasic.hs  ParserBench.hs  SEND_BUILDER_RESULTS.txt  SendBuilderBench.hs  WFBasic.hs
wireform-core/cbits/: base64.c  fast_rng.c  fast_scan.c  magic_ring_linux.c  magic_ring_posix.c  magic_ring_windows.c  wireform_hash_simd.c
wireform-core/docs/: Internals.md  Performance.md  Platforms.md  Tutorial.md
wireform-core/include/: magic_ring.h
wireform-core/test/: Spec.hs
wireform-csv/: README.md  wireform-csv.cabal
wireform-csv/bench/: Bench.hs
wireform-csv/test/: Main.hs
wireform-delta/: README.md  wireform-delta.cabal
wireform-delta/probe/: Probe.hs
wireform-delta/scripts/: delta_interop.py
wireform-delta/test/: Main.hs
wireform-derive/: CHANGELOG.md  README.md  wireform-derive.cabal
wireform-derive/test/: Main.hs
wireform-edn/: README.md  wireform-edn.cabal
wireform-edn/bench/: Bench.hs
wireform-edn/test/: Main.hs
wireform-flatbuffers/: README.md  wireform-flatbuffers.cabal
wireform-flatbuffers/bench/: Bench.hs
wireform-flatbuffers/test/: Main.hs
wireform-fory/: README.md  wireform-fory.cabal
wireform-fory/bench/: Bench.hs  bench.py
wireform-fory/test/: Main.hs
wireform-fory/test-interop/: Fuzz.hs  Main.hs  Manual.hs  driver.py
wireform-fury/: wireform-fury.cabal
wireform-fury/test/: Main.hs
wireform-fury/test-interop/: Main.hs  driver.py
wireform-grpc/: CHANGELOG.md  README.md  wireform-grpc.cabal
wireform-grpc/scripts/: cross-language-interop.sh
wireform-grpc/test-grapesy/: Main.hs
wireform-grpc/test-minimal/: Main.hs
wireform-html/: README.md  wireform-html.cabal
wireform-html/cbits/: html_scan.c
wireform-html/test/: Main.hs
wireform-http/: wireform-http.cabal
wireform-http-wai/: LICENSE  wireform-http-wai.cabal
wireform-http-wai/bench/: Main.hs
wireform-http-wai/test/: Main.hs
wireform-http/bench/: Main.hs
wireform-http/test/: Main.hs
wireform-http1/: wireform-http1.cabal
wireform-http1/bench/: Main.hs  RecvVsTransport.hs
wireform-http1/bench-server/: EchoServer.hs  RunServerBench.hs  StaticBenchServer.hs  WireformServer.hs
wireform-http1/cbits/: http1_scan.c  http1_scan.h  http1_send.c
wireform-http1/test/: Main.hs
wireform-http1/test-conformance/: Main.hs
(+2460 files in other folders)
