cabal-version:      3.0
name:               hs-proto
version:            0.1.0.0
synopsis:           High-performance Protocol Buffers for Haskell
description:
  A comprehensive Protocol Buffers library featuring:
  .
  * Full proto2/proto3 IDL parser
  * Custom annotation support
  * High-performance wire format encoding/decoding
  * Code generation producing plain Haskell records
  * Zero-copy decoding where possible
  * Packed repeated field support
  * Lazy submessage decoding

license:            BSD-3-Clause
build-type:         Simple

data-files:
  proto/google/protobuf/any.proto
  proto/google/protobuf/api.proto
  proto/google/protobuf/duration.proto
  proto/google/protobuf/empty.proto
  proto/google/protobuf/field_mask.proto
  proto/google/protobuf/source_context.proto
  proto/google/protobuf/struct.proto
  proto/google/protobuf/timestamp.proto
  proto/google/protobuf/type.proto
  proto/google/protobuf/wrappers.proto

data-dir: .

flag python-interop
  description: Enable Python interop conformance tests (requires python3, protobuf pip package, protoc)
  manual: True
  default: False

common warnings
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
      -O2

library
    import:           warnings
    exposed-modules:
      Proto.AST
      Proto.Parser
      Proto.Parser.Lexer
      Proto.Parser.Resolver
      Proto.Wire
      Proto.Wire.Encode
      Proto.Wire.Decode
      Proto.Encode
      Proto.Decode
      Proto.Annotations
      Proto.CodeGen
      Proto.CodeGen.Types
      Proto.CodeGen.Encode
      Proto.CodeGen.Decode
      Proto.SizedBuilder
      Proto.Church
      Proto.VectorBuilder
      Proto.Message
      Proto.Schema
      Proto.Lens
      Proto.Repr
      Proto.Compat
      Proto.Options
      Proto.Print
      Proto.Inspect
      Proto.Setup
      Proto.TH
      Proto.QQ
      Proto.JSON
      Proto.Merge
      Proto.FieldPresence
      -- Well-known types (generated from proto/google/protobuf/*.proto)
      Proto.Google.Protobuf.Any
      Proto.Google.Protobuf.Any.Util
      Proto.Google.Protobuf.Timestamp
      Proto.Google.Protobuf.Duration
      Proto.Google.Protobuf.Empty
      Proto.Google.Protobuf.Wrappers
      Proto.Google.Protobuf.FieldMask
      Proto.Google.Protobuf.SourceContext
      Proto.Google.Protobuf.Struct
      Proto.Google.Protobuf.WellKnownInstances

    c-sources:        cbits/fast_decode.c
    cc-options:       -O3 -march=native

    build-depends:
        base             >= 4.17   && < 5
      , bytestring       >= 0.11   && < 0.13
      , containers       >= 0.6    && < 0.8
      , megaparsec       >= 9.0    && < 10
      , text             >= 2.0    && < 2.2
      , vector           >= 0.13   && < 0.14
      , primitive         >= 0.7    && < 0.10
      , mtl              >= 2.2    && < 2.4
      , filepath         >= 1.4    && < 1.6
      , directory        >= 1.3    && < 1.4
      , deepseq          >= 1.4    && < 1.6
      , template-haskell >= 2.19   && < 2.21
      , prettyprinter    >= 1.7    && < 1.8
      , base16-bytestring >= 1.0  && < 1.1

    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      DeriveGeneric
      DeriveAnyClass
      OverloadedStrings
      LambdaCase

test-suite hs-proto-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
      Test.Parser
      Test.Wire
      Test.Roundtrip
      Test.CodeGen
      Test.WellKnown
      Test.PrintInspect
      Test.Compat
      Test.Schema
      Test.Options
      Test.Lens

    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , bytestring
      , containers
      , text
      , vector
      , hedgehog         >= 1.0  && < 1.5
      , tasty            >= 1.4  && < 1.6
      , tasty-hedgehog   >= 1.0  && < 1.5
      , tasty-hunit      >= 0.10 && < 0.11

    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings

executable hs-proto-gen
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base                 >= 4.17 && < 5
      , hs-proto
      , text
      , containers
      , directory
      , filepath
      , optparse-applicative >= 0.17 && < 0.20

    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-basic
    import:           warnings
    main-is:          BasicEncodeDecode.hs
    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , bytestring
      , text
      , deepseq
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-any
    import:           warnings
    main-is:          AnyExample.hs
    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , bytestring
      , text
      , deepseq
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-wellknown
    import:           warnings
    main-is:          WellKnownTypes.hs
    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , bytestring
      , containers
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-codegen
    import:           warnings
    main-is:          ProtoCodeGen.hs
    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , text
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings
      LambdaCase

executable example-setup-hook
    import:           warnings
    main-is:          ExampleSetup.hs
    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , text
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-custom-repr
    import:           warnings
    main-is:          CustomReprExample.hs
    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , bytestring
      , text
      , containers
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-th
    import:           warnings
    main-is:          THExample.hs
    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , bytestring
      , text
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-qq
    import:           warnings
    main-is:          QQExample.hs
    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , bytestring
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

benchmark compare-bench
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    HsProtoTypes
                    , Proto.Bench
                    , Proto.Bench_Fields
    build-depends:
        base               >= 4.17 && < 5
      , hs-proto
      , bytestring
      , text
      , vector
      , deepseq
      , criterion          >= 1.5  && < 1.7
      , proto-lens         >= 0.7  && < 0.8
      , proto-lens-runtime >= 0.7  && < 0.8
      , lens-family        >= 2.1  && < 2.2

    hs-source-dirs:   compare-bench
                    , compare-bench/gen
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      DeriveGeneric
      DeriveAnyClass
      OverloadedStrings

executable profile
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -O2 -rtsopts
    build-depends:
        base >= 4.17 && < 5
      , hs-proto
      , bytestring
      , text
      , vector
    hs-source-dirs:   profile
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings
      LambdaCase

executable hs-proto-bench
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , bytestring
      , text
      , vector

    hs-source-dirs:   bench
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings

test-suite python-interop
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    InteropTypes

    if !flag(python-interop)
      buildable: False

    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , bytestring
      , text
      , vector
      , containers
      , deepseq
      , process          >= 1.6  && < 1.8
      , hedgehog         >= 1.0  && < 1.5
      , tasty            >= 1.4  && < 1.6
      , tasty-hedgehog   >= 1.0  && < 1.5
      , tasty-hunit      >= 0.10 && < 0.11

    hs-source-dirs:   interop-test
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings
      LambdaCase

test-suite temporal-codegen-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
      Proto.Temporal.Temporal.Api.Activity.V1.Message
      Proto.Temporal.Temporal.Api.Batch.V1.Message
      Proto.Temporal.Temporal.Api.Command.V1.Message
      Proto.Temporal.Temporal.Api.Common.V1.Message
      Proto.Temporal.Temporal.Api.Deployment.V1.Message
      Proto.Temporal.Temporal.Api.Enums.V1.Activity
      Proto.Temporal.Temporal.Api.Enums.V1.BatchOperation
      Proto.Temporal.Temporal.Api.Enums.V1.CommandType
      Proto.Temporal.Temporal.Api.Enums.V1.Common
      Proto.Temporal.Temporal.Api.Enums.V1.Deployment
      Proto.Temporal.Temporal.Api.Enums.V1.EventType
      Proto.Temporal.Temporal.Api.Enums.V1.FailedCause
      Proto.Temporal.Temporal.Api.Enums.V1.Namespace
      Proto.Temporal.Temporal.Api.Enums.V1.Nexus
      Proto.Temporal.Temporal.Api.Enums.V1.Query
      Proto.Temporal.Temporal.Api.Enums.V1.Reset
      Proto.Temporal.Temporal.Api.Enums.V1.Schedule
      Proto.Temporal.Temporal.Api.Enums.V1.TaskQueue
      Proto.Temporal.Temporal.Api.Enums.V1.Update
      Proto.Temporal.Temporal.Api.Enums.V1.Workflow
      Proto.Temporal.Temporal.Api.Errordetails.V1.Message
      Proto.Temporal.Temporal.Api.Export.V1.Message
      Proto.Temporal.Temporal.Api.Failure.V1.Message
      Proto.Temporal.Temporal.Api.Filter.V1.Message
      Proto.Temporal.Temporal.Api.History.V1.Message
      Proto.Temporal.Temporal.Api.Namespace.V1.Message
      Proto.Temporal.Temporal.Api.Nexus.V1.Message
      Proto.Temporal.Temporal.Api.Operatorservice.V1.RequestResponse
      Proto.Temporal.Temporal.Api.Operatorservice.V1.Service
      Proto.Temporal.Temporal.Api.Protocol.V1.Message
      Proto.Temporal.Temporal.Api.Query.V1.Message
      Proto.Temporal.Temporal.Api.Replication.V1.Message
      Proto.Temporal.Temporal.Api.Rules.V1.Message
      Proto.Temporal.Temporal.Api.Schedule.V1.Message
      Proto.Temporal.Temporal.Api.Sdk.V1.EnhancedStackTrace
      Proto.Temporal.Temporal.Api.Sdk.V1.TaskCompleteMetadata
      Proto.Temporal.Temporal.Api.Sdk.V1.UserMetadata
      Proto.Temporal.Temporal.Api.Sdk.V1.WorkerConfig
      Proto.Temporal.Temporal.Api.Sdk.V1.WorkflowMetadata
      Proto.Temporal.Temporal.Api.Taskqueue.V1.Message
      Proto.Temporal.Temporal.Api.Update.V1.Message
      Proto.Temporal.Temporal.Api.Version.V1.Message
      Proto.Temporal.Temporal.Api.Worker.V1.Message
      Proto.Temporal.Temporal.Api.Workflowservice.V1.RequestResponse
      Proto.Temporal.Temporal.Api.Workflowservice.V1.Service
      Proto.Temporal.Temporal.Api.Workflow.V1.Message
    build-depends:
        base             >= 4.17 && < 5
      , hs-proto
      , bytestring
      , containers
      , text
      , vector
      , deepseq
    hs-source-dirs:   temporal-test
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      DeriveGeneric
      DeriveAnyClass
      OverloadedStrings
      OverloadedRecordDot
      LambdaCase
