cabal-version:      3.0
name:               hs-proto
version:            0.1.0.0
synopsis:           High-performance Protocol Buffers for Haskell
description:
  A comprehensive Protocol Buffers library featuring:
  .
  * Full proto2/proto3 IDL parser
  * Custom annotation support
  * High-performance wire format encoding/decoding
  * Code generation producing plain Haskell records
  * Zero-copy decoding where possible
  * Packed repeated field support
  * Lazy submessage decoding

license:            BSD-3-Clause
build-type:         Simple

data-files:
  proto/google/protobuf/any.proto
  proto/google/protobuf/api.proto
  proto/google/protobuf/duration.proto
  proto/google/protobuf/empty.proto
  proto/google/protobuf/field_mask.proto
  proto/google/protobuf/source_context.proto
  proto/google/protobuf/struct.proto
  proto/google/protobuf/timestamp.proto
  proto/google/protobuf/type.proto
  proto/google/protobuf/wrappers.proto

data-dir: .

flag python-interop
  description: Enable Python interop conformance tests (requires python3, protobuf pip package, protoc)
  manual: True
  default: False

common warnings
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
      -O2

library
    import:           warnings
    exposed-modules:
      Proto.AST
      Proto.Parser
      Proto.Parser.Lexer
      Proto.Parser.Error
      Proto.Parser.Resolver
      Proto.Wire
      Proto.Wire.Encode
      Proto.Wire.Decode
      Proto.Encode
      Proto.Decode
      Proto.Annotations
      Proto.CodeGen
      Proto.CodeGen.Combinators
      Proto.CodeGen.Types
      Proto.CodeGen.Encode
      Proto.CodeGen.Decode
      Proto.SizedBuilder
      Proto.Church
      Proto.VectorBuilder
      Proto.Message
      Proto.Schema
      Proto.Lens
      Proto.Repr
      Proto.Compat
      Proto.Options
      Proto.Print
      Proto.Inspect
      Proto.Setup
      Proto.TH
      Proto.QQ
      Proto.JSON
      Proto.Merge
      Proto.FieldPresence
      -- Well-known types (generated from proto/google/protobuf/*.proto)
      Proto.Google.Protobuf.Any
      Proto.Google.Protobuf.Any.Util
      Proto.Google.Protobuf.Timestamp
      Proto.Google.Protobuf.Duration
      Proto.Google.Protobuf.Empty
      Proto.Google.Protobuf.Wrappers
      Proto.Google.Protobuf.FieldMask
      Proto.Google.Protobuf.SourceContext
      Proto.Google.Protobuf.Struct
      Proto.Registry
      Proto.Registry.TH
      -- New modules
      Proto.Dynamic
      Proto.TDP
      Proto.TextFormat
      Proto.Conformance
      Proto.CodeGen.Service
      Proto.CodeGen.Hooks
      Proto.JSON.WellKnown
      Proto.Options.Custom
      Proto.Google.Protobuf.Descriptor
      Proto.Google.Protobuf.Compiler.Plugin
      Proto.Descriptor.Convert
      Proto.Internal.Maybe
      Proto.Internal.Either
      Proto.Wire.Result
      Proto.Wire.FFI
      Proto.Decode.Stream
      Proto.Decode.Fast
      Proto.Encode.Lazy
      Proto.Encode.Archetype
      Proto.Encode.Direct
      Avro.Wire
      Avro.Schema
      Avro.Value
      Avro.Encode
      Avro.Decode
      Avro.JSON
      Avro.Resolution
      -- Well-known type utilities
      Proto.Google.Protobuf.Timestamp.Util
      Proto.Google.Protobuf.Duration.Util
      Proto.Google.Protobuf.FieldMask.Util
      Proto.Google.Protobuf.Wrappers.Util
      Proto.Google.Protobuf.Struct.Util
      -- Thrift support
      Thrift.Wire
      Thrift.Schema
      Thrift.Value
      Thrift.Encode
      Thrift.Decode
      Thrift.JSON
      Thrift.Message
      -- gRPC framing
      Proto.GRPC
      -- Avro Protocol / IPC
      Avro.Protocol
      -- CBOR support
      CBOR.Value
      CBOR.Encode
      CBOR.Decode
      CBOR.JSON
      -- MessagePack support
      MsgPack.Value
      MsgPack.Encode
      MsgPack.Decode
      MsgPack.JSON
      -- BSON support
      BSON.Value
      BSON.Encode
      BSON.Decode
      -- Amazon Ion support
      Ion.Value
      Ion.Encode
      Ion.Decode
      -- Cap'n Proto support
      CapnProto.Value
      CapnProto.Encode
      CapnProto.Decode
      -- FlatBuffers support
      FlatBuffers.Value
      FlatBuffers.Encode
      FlatBuffers.Decode
      -- Apache Iceberg table metadata
      Iceberg.Types
      Iceberg.JSON
      Iceberg.Manifest
      -- Microsoft Bond support
      Bond.Value
      Bond.Encode
      Bond.Decode
      -- ASN.1 BER/DER support
      ASN1.Value
      ASN1.Encode
      ASN1.Decode
      -- Apache Parquet metadata
      Parquet.Types
      Parquet.Footer
      -- Python Pickle support
      Pickle.Value
      Pickle.Encode
      Pickle.Decode
      -- Apache Arrow IPC
      Arrow.Types
      Arrow.IPC
      -- EDN (Extensible Data Notation) support
      EDN.Value
      EDN.Encode
      EDN.Decode
      EDN.JSON

    c-sources:        cbits/fast_decode.c
    include-dirs:     cbits/simde
    cc-options:       -O3 -march=native

    build-depends:
        base             >= 4.16   && < 5
      , bytestring       >= 0.11   && < 0.13
      , containers       >= 0.6    && < 0.8
      , megaparsec       >= 9.0    && < 10
      , text             >= 2.0    && < 2.2
      , vector           >= 0.13   && < 0.14
      , primitive         >= 0.7    && < 0.10
      , mtl              >= 2.2    && < 2.4
      , filepath         >= 1.4    && < 1.6
      , directory        >= 1.3    && < 1.4
      , deepseq          >= 1.4    && < 1.6
      , template-haskell >= 2.18   && < 2.24
      , prettyprinter    >= 1.7    && < 1.8
      , base16-bytestring >= 1.0  && < 1.1
      , base64-bytestring >= 1.2  && < 1.3
      , aeson             >= 2.1  && < 2.3
      , scientific        >= 0.3  && < 0.4
      , hashable          >= 1.3  && < 1.6
      , unordered-containers >= 0.2.16 && < 0.3
      , time              >= 1.9    && < 1.15
      , cryptohash-md5    >= 0.11   && < 0.12

    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      DeriveGeneric
      DeriveAnyClass
      OverloadedStrings
      LambdaCase

test-suite hs-proto-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
      Test.Parser
      Test.Wire
      Test.Roundtrip
      Test.CodeGen
      Test.WellKnown
      Test.WellKnownUtil
      Test.PrintInspect
      Test.Compat
      Test.Schema
      Test.Options
      Test.Lens
      Test.StreamCodec
      Test.JSON
      Test.Hooks
      Test.TDP
      Test.Thrift
      Test.Avro
      Test.GRPC
      Test.CBOR
      Test.MsgPack
      Test.BSON
      Test.Ion
      Test.CapnProto
      Test.FlatBuffers
      Test.Iceberg
      Test.Bond
      Test.ASN1
      Test.Parquet
      Test.Pickle
      Test.Arrow
      Test.EDN

    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
      , containers
      , text
      , vector
      , aeson
      , hashable
      , unordered-containers
      , time
      , hedgehog         >= 1.0  && < 1.5
      , tasty            >= 1.4  && < 1.6
      , tasty-hedgehog   >= 1.0  && < 1.5
      , tasty-hunit      >= 0.10 && < 0.11

    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings

executable hs-proto-gen
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base                 >= 4.16 && < 5
      , hs-proto
      , text
      , containers
      , directory
      , filepath
      , optparse-applicative >= 0.17 && < 0.20

    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-basic
    import:           warnings
    main-is:          BasicEncodeDecode.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
      , text
      , deepseq
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-any
    import:           warnings
    main-is:          AnyExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
      , text
      , deepseq
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-wellknown
    import:           warnings
    main-is:          WellKnownTypes.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
      , containers
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-codegen
    import:           warnings
    main-is:          ProtoCodeGen.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , text
      , containers
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings
      LambdaCase

executable example-setup-hook
    import:           warnings
    main-is:          ExampleSetup.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , text
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-custom-repr
    import:           warnings
    main-is:          CustomReprExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
      , text
      , containers
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-th
    import:           warnings
    main-is:          THExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
      , text
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-qq
    import:           warnings
    main-is:          QQExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

test-suite conformance-self-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
      , vector
    hs-source-dirs:   test-conformance
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable bench-grow
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , vector

    hs-source-dirs:   bench-grow
    default-language: GHC2021
    default-extensions:
      StrictData

executable hs-proto-conformance
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto

    hs-source-dirs:   conformance
    default-language: GHC2021

executable protoc-gen-hs-proto
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , text
      , vector

    hs-source-dirs:   protoc-plugin
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

benchmark compare-bench
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    HsProtoTypes
                    , Proto.Bench
                    , Proto.Bench_Fields
    build-depends:
        base               >= 4.16 && < 5
      , hs-proto
      , bytestring
      , text
      , vector
      , deepseq
      , criterion          >= 1.5  && < 1.7
      , proto-lens         >= 0.7  && < 0.8
      , proto-lens-runtime >= 0.7  && < 0.8
      , lens-family        >= 2.1  && < 2.2

    hs-source-dirs:   compare-bench
                    , compare-bench/gen
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      DeriveGeneric
      DeriveAnyClass
      OverloadedStrings

executable gen-wkt
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , containers
      , text
      , directory
      , filepath
    hs-source-dirs:   gen-wkt
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable profile
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -O2 -rtsopts
    build-depends:
        base >= 4.16 && < 5
      , hs-proto
      , bytestring
      , text
      , vector
    hs-source-dirs:   profile
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings
      LambdaCase

executable hs-proto-bench
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
      , text
      , vector

    hs-source-dirs:   bench
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings

executable avro-thrift-bench
    import:           warnings
    main-is:          AvroBench.hs
    ghc-options:      -O2
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
      , text
      , deepseq
      , vector

    hs-source-dirs:   bench
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings

test-suite python-interop
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    InteropTypes

    if !flag(python-interop)
      buildable: False

    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
      , text
      , vector
      , containers
      , deepseq
      , process          >= 1.6  && < 1.8
      , hedgehog         >= 1.0  && < 1.5
      , tasty            >= 1.4  && < 1.6
      , tasty-hedgehog   >= 1.0  && < 1.5
      , tasty-hunit      >= 0.10 && < 0.11

    hs-source-dirs:   interop-test
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings
      LambdaCase

test-suite temporal-codegen-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
      Proto.Temporalio.Api.Activity.V1.Message
      Proto.Temporalio.Api.Batch.V1.Message
      Proto.Temporalio.Api.Command.V1.Message
      Proto.Temporalio.Api.Common.V1.Message
      Proto.Temporalio.Api.Deployment.V1.Message
      Proto.Temporalio.Api.Enums.V1.Activity
      Proto.Temporalio.Api.Enums.V1.BatchOperation
      Proto.Temporalio.Api.Enums.V1.CommandType
      Proto.Temporalio.Api.Enums.V1.Common
      Proto.Temporalio.Api.Enums.V1.Deployment
      Proto.Temporalio.Api.Enums.V1.EventType
      Proto.Temporalio.Api.Enums.V1.FailedCause
      Proto.Temporalio.Api.Enums.V1.Namespace
      Proto.Temporalio.Api.Enums.V1.Nexus
      Proto.Temporalio.Api.Enums.V1.Query
      Proto.Temporalio.Api.Enums.V1.Reset
      Proto.Temporalio.Api.Enums.V1.Schedule
      Proto.Temporalio.Api.Enums.V1.TaskQueue
      Proto.Temporalio.Api.Enums.V1.Update
      Proto.Temporalio.Api.Enums.V1.Workflow
      Proto.Temporalio.Api.ErrorDetails.V1.Message
      Proto.Temporalio.Api.Export.V1.Message
      Proto.Temporalio.Api.Failure.V1.Message
      Proto.Temporalio.Api.Filter.V1.Message
      Proto.Temporalio.Api.History.V1.Message
      Proto.Temporalio.Api.Namespace.V1.Message
      Proto.Temporalio.Api.Nexus.V1.Message
      Proto.Temporalio.Api.OperatorService.V1.RequestResponse
      Proto.Temporalio.Api.OperatorService.V1.Service
      Proto.Temporalio.Api.Protocol.V1.Message
      Proto.Temporalio.Api.Query.V1.Message
      Proto.Temporalio.Api.Replication.V1.Message
      Proto.Temporalio.Api.Rules.V1.Message
      Proto.Temporalio.Api.Schedule.V1.Message
      Proto.Temporalio.Api.Sdk.V1.EnhancedStackTrace
      Proto.Temporalio.Api.Sdk.V1.TaskCompleteMetadata
      Proto.Temporalio.Api.Sdk.V1.UserMetadata
      Proto.Temporalio.Api.Sdk.V1.WorkerConfig
      Proto.Temporalio.Api.Sdk.V1.WorkflowMetadata
      Proto.Temporalio.Api.TaskQueue.V1.Message
      Proto.Temporalio.Api.Update.V1.Message
      Proto.Temporalio.Api.Version.V1.Message
      Proto.Temporalio.Api.Worker.V1.Message
      Proto.Temporalio.Api.WorkflowService.V1.RequestResponse
      Proto.Temporalio.Api.WorkflowService.V1.Service
      Proto.Temporalio.Api.Workflow.V1.Message
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , aeson
      , bytestring
      , containers
      , deepseq
      , hashable
      , text
      , vector
    hs-source-dirs:   temporal-test
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      DeriveGeneric
      DeriveAnyClass
      OverloadedStrings
      OverloadedRecordDot
      LambdaCase

benchmark format-bench
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          FormatBench.hs
    build-depends:
        base             >= 4.16 && < 5
      , hs-proto
      , bytestring
      , text
      , vector
      , deepseq
      , criterion        >= 1.5  && < 1.7
      , msgpack          >= 1.0  && < 1.1
      , cborg            >= 0.2  && < 0.3
    hs-source-dirs:   bench
    default-language: GHC2021
    ghc-options:      -O2
